# mdbook-epub

./: .justfile  .pre-commit-config.yaml  Cargo.toml  README.md  appveyor.yml  flake.nix
.github/workflows/: ci.yml  trpl.yml
ci/: epubcheck.bat  github_pages.sh
examples/: build_trpl.rs
src/: config.rs  generator.rs  html.rs  lib.rs  master.css  resources.rs
tests/: integration_tests.rs
tests/dummy/src/: SUMMARY.md  chapter_1.md  draft_1.md
tests/dummy/src/02_advanced/: README.md
tests/dummy/src/draft/: draft_2.md
