[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "An EPUB renderer for mdbook."
name = "mdbook-epub"
version = "0.4.28"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Michael-F-Bryan/mdbook-epub"
documentation = "https://docs.rs/mdbook-epub"
keywords = ["epub", "mdbook", "documentation"]
categories = ["command-line-interface", "development-tools"]
edition = "2021"

[package.metadata.release]
sign-commit = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "mdbook-epub"
doc = false

[dependencies]
epub-builder = {git = "https://github.com/dieterplex/epub-builder", tag = "v0.6.0"}
clap ={ version = "4.0", default-features = false, features = ["derive"]}
thiserror = "1.0"
pulldown-cmark = "0.9"
sanitize-filename = "0.4"
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mime_guess = "2.0"
env_logger = "0.10"
log = "0.4"
mdbook = { version = "0.4.28", default-features = false }
handlebars = "4.3"
toml = "0.5"
html_parser = "0.6.2"
url = "2.3"
ureq = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"]}

[dev-dependencies]
tempfile = "3.4"
epub = "1.2"
serial_test = "0.5"
mockall = "0.11"
relative-path = "1.7"

[profile.release]
lto = true
#strip = true
