[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "An EPUB renderer for mdbook."
name = "mdbook-epub"
version = "0.5.0+0.4.43"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Michael-F-Bryan/mdbook-epub"
documentation = "https://docs.rs/mdbook-epub"
keywords = ["epub", "mdbook", "documentation"]
categories = ["command-line-interface", "development-tools"]
edition = "2021"

[package.metadata.release]
sign-commit = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "mdbook-epub"
doc = false

[dependencies]
epub-builder = { version = "=0.8.0-alpha" }
clap ={ version = "4.3", default-features = false, features = ["derive"]}
thiserror = "1.0"
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] } # in keeping with mdBook
sanitize-filename = "0.6"
semver = "1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0"
env_logger = "0.11"
log = "0.4"
mdbook = { version = "0.4.43", default-features = false }
handlebars = "6.0"
toml = "0.5.11" # in keeping with mdBook
html_parser = "0.7.0"
url = "2.3"
ureq = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"]}

[dev-dependencies]
tempfile = "3.4"
epub = "2.1"
serial_test = "3.2"
mockall = "0.13"
relative-path = "1.9"

[profile.release]
lto = true
#strip = true
